Fix menu being empty on narrow layouts (#6440)
Fixes https://github.com/dart-lang/site-www/issues/6439 which was caused
by a CSS order change in
https://github.com/dart-lang/site-www/pull/6436. Also fixes some of the
related TODOs left by that change in order to fix the issue without
reverting.

Can test by toggling the menu in a narrow layout of the page, ensuring
it is visible, then ensuring the page content is still visible as well
once the menu is closed.

--- a/src/_sass/base/_layout.scss
+++ b/src/_sass/base/_layout.scss
@@ -5,14 +5,15 @@
 }
 
 #page-content {
+  display: flex;
   min-height: calc(100vh - $site-header-height);
   min-width: 0;
   width: 100%;
+  flex-direction: row;
+  justify-content: center;
 
-  &:not(.focused) {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  &.focused {
+    flex-direction: column;
   }
 
   body.obsolete & {
